--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,13 @@ h3 {
   margin-top: 10px;
 }
 
+/*
 .progress {
   border-radius: 0;
   margin: 0 15px 0 30px;
   max-height: 10px;
 }
+*/
 
 .nivel {
   background-color: var(--content-color);
