--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,6 @@ h3 {
   margin-top: 10px;
 }
 
-/*
-.progress {
-  border-radius: 0;
-  margin: 0 15px 0 30px;
-  max-height: 10px;
-}
-*/
-
 .nivel {
   background-color: var(--content-color);
 }
@@ -171,7 +163,11 @@ h3 {
   padding: 10px;
 }
 
-.titutos {
+.titulos {
   font-size: 24px;
   font-weight: 500;
+}
+
+.titulo-experiencia {
+  font-weight: 600;
 }
